Mon Mar 12 18:43:38 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Server now enforces the maximum length for the nickname and
	  the channel as protocol specification dictates.  128 bytes for
	  nickname and 256 bytes for channel name.

	* Moved the WHOIS printing to the application.  The client libary
	  does not print out the WHOIS information anymore, the application
	  must do it.  Renamed silc_client_command_reply_whois_print to
	  the silc_client_command_reply_whois_save.

	  The client's idle time is also sent to the application now, and
	  the idle is shown on screen.

	* Added silc_client_command_reply_identify_save to save the
	  received IDENTIFY entries.

	* Do not check for channel private keys in message sending and
	  reception if the channel does not have the PRIVKEY mode set.
	  Affected file lib/silclient/client_channel.c.

Sun Mar 11 20:25:06 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed a minor bug if WHOIS and IDENTIFY command parsing that
	  just surfaced after chaning the JOIN procedure.

Sun Mar 11 14:59:05 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added silc_client_get_clients_by_list to get client entries
	  from Client ID list, that is returned for example by JOIN
	  and USERS command replies.  The application should use this
	  function for example when JOIN command reply is received to
	  resolve the clients already on the channel (library does not
	  do that anymore as USERS command reply is not used in the JOIN
	  procedure anymore).  Affected files lib/silcclient/silcapi.h and
	  lib/silcclient/idlist.c.

	* JOIN command reply and USERS command reply returns now SilcBuffer
	  pointers instead of unsigned char pointers when returning
	  the client list and mode list.

	* Added <Client ID> argument to the JOIN command reply, mainly
	  for the server to identify for which client the command was
	  originally sent.  Updated protocol specs accordingly.
