@@ -1,3 +1,8 @@
+Tue Mar 13 12:49:21 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
+
+	* Added dist-bzip hook to the Makefile.am to make bzip2
+	  compressed distributions.
+
 Mon Mar 12 18:43:38 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 
 	* Server now enforces the maximum length for the nickname and
